[tool.poetry]
name = "findwords"
version = "1.0.0"
description = "Find words from specific website"
authors = ["Minh Nguyen"]
packages = [
    { include = "findwords", from = "src"}
]

[tool.poetry.dependencies]
python = "~3.8"
requests = "==2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
jq = "==1.1.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
